--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   shared_preferences: ^2.2.0
+  flutter_secure_storage: ^9.2.2
   http: ^1.2.0
   image_picker: ^1.0.4
   dio: ^5.9.0
