--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_secure_storage: ^9.2.2
   http: ^1.2.0
   image_picker: ^1.0.4
+  intl: ^0.18.1
   dio: ^5.9.0
   flutter:
     sdk: flutter
